test/patternMatch.slq
// args: --run

def f[n:!â„•](x:ğ”¹^n)mfree{
	if n=0{ return x; }
    __tmp0 := x;
    (__tmp1,) := __tmp0[0..1];
    a := reverse(H)(__tmp1);
    b := reverse(f[n sub 1])(__tmp0[1..__tmp0.length]);
    forget(__tmp0=(H(a),) ~ f[n sub 1](b)); // error
	return (a,)~b; // error
}
def main(){
	return f(0:ğ”¹,0:ğ”¹,0:ğ”¹);
}
